Closed
Bug 487104
Opened 16 years ago
Closed 16 years ago
GCThreadLocal needs to be VMPI-ized
Categories
(Tamarin Graveyard :: Garbage Collection (mmGC), defect)
Tamarin Graveyard
Garbage Collection (mmGC)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: rishah, Unassigned)
References
Details
Attachments
(1 file)
16.04 KB,
patch
|
treilly
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 6.0; SLCC1; .NET CLR 2.0.50727; Media Center PC 5.0; .NET CLR 3.5.30729; .NET CLR 3.0.30618)
Build Identifier:
GCThreadLocal class uses Win32/Posix APIs for implementing TLS. In the spirit of porting, we need replace these with appropriate VMPI APIs.
Reproducible: Always
Reporter | ||
Comment 1•16 years ago
|
||
Attachment #372422 -
Flags: review?(treilly)
Comment 2•16 years ago
|
||
Comment on attachment 372422 [details] [diff] [review]
[v1] patch
I think we shouldn't compile (or not link) if someone tries to compile ThreadsPosix and there's no pthreads, the default impl provided here is just broken.
Attachment #372422 -
Flags: review?(treilly) → review-
Reporter | ||
Comment 3•16 years ago
|
||
So just get rid of the default implementation?
Reporter | ||
Comment 4•16 years ago
|
||
Also, I think that vmpi_tls_id_t is unnecessary. I intend to replace that with uintptr_t in the APIs.
Comment 5•16 years ago
|
||
Comment on attachment 372422 [details] [diff] [review]
[v1] patch
+ with the default unix impl taken out
Attachment #372422 -
Flags: review- → review+
Comment 6•16 years ago
|
||
actually I take that back, there seems to be some missing manifest file updates for the xp build system
Reporter | ||
Comment 7•16 years ago
|
||
I have added ThreadsWin.cpp to VMPI/manifest.mk
Comment 8•16 years ago
|
||
doh, not sure how I missed that...
Reporter | ||
Comment 9•16 years ago
|
||
changeset 1763 052befa27baf
Status: UNCONFIRMED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Updated•15 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•