Fix for bug 487104 -  GCThreadLocal needs to be VMPI-ized (r=treilly+)