MMgc/GCThreadLocal.h
@@ -39,112 +39,8 @@
 #ifndef __GCThreadLocal__
 #define __GCThreadLocal__
 
-#ifndef MMGC_PORTING_API
-
-#ifdef HAVE_PTHREADS
-#include <pthread.h>
-#endif
-
 namespace MMgc
 {
-#ifdef WIN32
-	/**
-	 * GCCriticalSection is a simple Critical Section class used by GCMemoryProfiler to
-	 * ensure mutually exclusive access.  GCSpinLock doesn't suffice since its not
-	 * re-entrant and we need that
-	 */
-	class GCCriticalSection
-	{
-	public:
-		GCCriticalSection()
-		{
-			InitializeCriticalSection(&cs);
-		}
-
-		~GCCriticalSection()
-		{
-			DeleteCriticalSection(&cs);
-		}
-
-		inline void Acquire()
-		{
-			EnterCriticalSection(&cs);
-		}
-		
-		inline void Release()
-		{
-			LeaveCriticalSection(&cs);
-		}
-
-	private:
-		CRITICAL_SECTION cs;
-	};
-	
-	template<typename T>
-	class GCThreadLocal
-	{
-	public:
-		GCThreadLocal()
-		{
-			GCAssert(sizeof(T) <= sizeof(LPVOID));
-			tlsId = TlsAlloc();
-			TlsSetValue(tlsId, (LPVOID) NULL);
-		}
-
-		~GCThreadLocal()
-		{
-			TlsFree(tlsId);
-			tlsId = 0;
-		}
-
-		T operator=(T tNew)
-		{
-			TlsSetValue(tlsId, (LPVOID) tNew);
-			return tNew;
-		}
-		operator T() const
-		{
-			return (T) TlsGetValue(tlsId);
-		}
-		T operator->() const
-		{
-			return (T) TlsGetValue(tlsId);
-		}
-	private:
-		DWORD tlsId;
-	};
-#else
-
-#ifdef HAVE_PTHREADS
-    template<typename T>
-    class GCThreadLocal
-    {
-    public:
-        GCThreadLocal()
-        {
-            GCAssert(sizeof(T) <= sizeof(void*));
-            const int r = pthread_key_create(&tlsId, NULL);
-            GCAssert(r == 0);
-            (void)r;
-            // we expect the value to default to zero
-            GCAssert((T)pthread_getspecific(tlsId) == 0);
-        }
-        T operator=(T tNew)
-        {
-            const int r = pthread_setspecific(tlsId, (const void*)tNew);
-            GCAssert(r == 0);
-            (void)r;
-            GCAssert((T)pthread_getspecific(tlsId) == tNew);
-            return tNew;
-        }
-        operator T() const
-        {
-            return (T)pthread_getspecific(tlsId);
-        }
-    private:
-        pthread_key_t tlsId ;
-    };
-#else	//HAVE_PTHREADS
 	template<typename T>
 	class GCThreadLocal
 	{
@@ -152,57 +48,33 @@ namespace MMgc
 		GCThreadLocal()
 		{
 			GCAssert(sizeof(T) <= sizeof(void*));
+			bool r = VMPI_tlsCreate(&tlsId);
+			GCAssert(r);
+			(void)r;
+			VMPI_tlsSetValue(tlsId, NULL);
 		}
+
+		~GCThreadLocal()
+		{
+			VMPI_tlsDestroy(tlsId);
+		}
+
 		T operator=(T tNew)
 		{
-			return value=tNew;
+			VMPI_tlsSetValue(tlsId, (void*) tNew);
+			return tNew;
 		}
 		operator T() const
 		{
-			return value;
+			return (T) VMPI_tlsGetValue(tlsId);
+		}
+		T operator->() const
+		{
+			return (T) VMPI_tlsGetValue(tlsId);
 		}
 	private:
-		T value ;
-	};
-#endif	//HAVE_PTHREADS
-	
-	class GCCriticalSection
-	{
-	public:
-		GCCriticalSection()
-		{
-		}
-
-		inline void Acquire()
-		{
-		}
-		
-		inline void Release()
-		{
-		}
-	};
-#endif
-
-	class GCEnterCriticalSection
-	{
-	public:
-		GCEnterCriticalSection(GCCriticalSection& cs) : m_cs(cs)
-		{
-			m_cs.Acquire();
-		}
-		~GCEnterCriticalSection()
-		{
-			m_cs.Release();
-		}
-
-	private:
-		GCCriticalSection& m_cs;
-
-		GCEnterCriticalSection & operator = (const GCEnterCriticalSection&);
-		GCEnterCriticalSection(const GCEnterCriticalSection&);
+		uintptr_t tlsId;
 	};
 }
-
-#endif // MMGC_PORTING_API
 
 #endif
